Add div in center of screen and edit css

--- a/easylsh_newtab/index.html
+++ b/easylsh_newtab/index.html
@@ -10,10 +10,9 @@
 
 <title>New tab</title>
 
-<a href="https://logins2.renweb.com/logins/ParentsWeb-Login.aspx">Facts</a>
-
 <div class="center">
-    This is a test
+    <h1>CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT</h1>
+    <a class="link-button" href="https://logins2.renweb.com/logins/ParentsWeb-Login.aspx">Facts</a>
 </div>
 
 </html>
