Get halfway done with onload function

--- a/easylsh_newtab/index.html
+++ b/easylsh_newtab/index.html
@@ -10,9 +10,13 @@
 
 <title>New tab</title>
 
+<body onload="alert('hello')">
+
 <div class="center">
     <h1>CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT</h1>
     <a class="link-button" href="https://logins2.renweb.com/logins/ParentsWeb-Login.aspx">Facts</a>
 </div>
+    
+</body>
 
 </html>
