--- a/easylsh_newtab/index.html
+++ b/easylsh_newtab/index.html
@@ -10,7 +10,7 @@
 
 <title>New tab</title>
 
-<body onload="alert('hello')">
+<body>
 
 <div class="center">
     <h1>CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT</h1>
