Create iframe with javascript

--- a/easylsh_newtab/index.html
+++ b/easylsh_newtab/index.html
@@ -8,9 +8,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
+<body>
+
 <title>New tab</title>
 
-<body>
+<script type="text/javascript" src="/scripts/get_data.js"></script>
 
 <div class="center">
     <h1>CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT</h1>
