edit popup window and add javascript button

--- a/easylsh_newtab/index.html
+++ b/easylsh_newtab/index.html
@@ -1,22 +1,23 @@
 <html>
 
 <head>
-        <!-- Stylesheet -->
-        <link rel="stylesheet" href="/style.css">
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="/style.css">
 
-        <!-- Set pixel size -->
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Set pixel size -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
 
-<title>New tab</title>
+<title>New Tab</title>
 
-<script type="text/javascript" src="/scripts/get_data.js"></script>
+<script type="text/javascript" src="/scripts/page_code.js"></script>
 
-<div class="center">
+<div class="center round-corners">
     <h1>CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT</h1>
     <a class="link-button" href="https://logins2.renweb.com/logins/ParentsWeb-Login.aspx">Facts</a>
+    <a class="link-button" id="javascript_test">Javascript test</a>
 </div>
     
 </body>
