Somehow fix wrong size popup
by replacing <html> with <!DOCTYPE html>

--- a/popup.html
+++ b/popup.html
@@ -1,4 +1,4 @@
-<html>
+<!DOCTYPE html>
 
 <head>
     <!-- Stylesheet -->
@@ -12,13 +12,13 @@
     EasyLSH Settings
 </title>
 
-<body>
+<body class="popup-body">
 
     <div class="popup-header dont-wrap-text">
         EasyLSH Settings
     </div>
     <div>
-        <h3>content content content content content</h3>
+        <h3>content content content content content content</h3>
     </div>
 
 </body>
