Fix popup size and add unfinished grid
The popup size fix took SO LONG ugh

--- a/popup.html
+++ b/popup.html
@@ -3,6 +3,7 @@
 <head>
     <!-- Stylesheet -->
     <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/popup_size_style.css">
 
     <!-- Set pixel size -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,14 +13,35 @@
     EasyLSH Settings
 </title>
 
-<body class="popup-body">
+<body>
 
-    <div class="popup-header dont-wrap-text">
-        EasyLSH Settings
+    <div class="no-style-div" id="popup-container">
+        <div class="popup-header dont-wrap-text">
+            EasyLSH Settings
+        </div>
+        <div>
+            <h3>ThisTextDoesNotWrap</h3>
+        </div>
+
+        <div class="grid-container">
+            <div class="grid-cell"></div>
+            <div class="grid-cell"></div>
+            <div class="grid-cell"></div>
+            <div class="grid-cell"></div>
+            <div class="grid-cell"></div>
+            <div class="grid-cell"></div>
+            <div class="grid-cell"></div>
+            <div class="grid-cell"></div>
+            <div class="grid-cell"></div>
+            <div class="grid-cell"></div>
+            <div class="grid-cell"></div>
+            <div class="grid-cell"></div>
+            <div class="grid-cell"></div>
+            <div class="grid-cell"></div>
+        </div>
     </div>
-    <div>
-        <h3>content content content content content content</h3>
-    </div>
+
+
 
 </body>
 
