Remove the grid and add some buttons
Gotta fix when you click empty space off the buttons

--- a/easylsh_newtab/index.html
+++ b/easylsh_newtab/index.html
@@ -17,7 +17,7 @@
 <div class="center round-corners">
     <h1>CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT</h1>
     <a class="link-button" href="https://logins2.renweb.com/logins/ParentsWeb-Login.aspx">FACTS</a>
-    <a class="link-button" id="javascript_test">Javascript test</a>
+    <p class="link-button" id="javascript_test">Javascript test</p>
 </div>
     
 </body>
