Make button better
thanks dad for teaching me about lambda expressions in javascript :)

--- a/popup.html
+++ b/popup.html
@@ -22,10 +22,12 @@
     </div>
     
     <div class="center-text" id="settings-buttons-div">
-        <p class="link-button" data-settings-button="schedule">Set schedule</p>
-        <p class="link-button" data-settings-button="test 2">Second test</p>
-        <p class="link-button" data-settings-button="test 3">Third test</p>
-    </div>  
+        <p class="link-button" id="schedule-button">Set schedule</p>
+    </div>
+
+    <div id="settings-div" class="no-style-div">
+        <div class="content">Stuff</div>
+    </div>
 
     <!-- </div> -->
 
