add unfinished background

--- a/easylsh_newtab/index.html
+++ b/easylsh_newtab/index.html
@@ -10,6 +10,10 @@
 
 <body>
 
+<div class="background-container">
+    <img src="backgrounds/background1.png" alt="background">
+</div>
+
 <title>New Tab</title>
 
 <script type="text/javascript" src="/scripts/page_code.js"></script>
@@ -19,7 +23,7 @@
     <a class="link-button" href="https://logins2.renweb.com/logins/ParentsWeb-Login.aspx">FACTS</a>
     <p class="link-button" id="javascript_test">Javascript test</p>
 </div>
-    
+
 </body>
 
 </html>
