add epic settings selection buttons

--- a/popup.html
+++ b/popup.html
@@ -20,13 +20,24 @@
     <div class="popup-header dont-wrap-text">
         EasyLSH Settings
     </div>
-    
-    <div class="center-text" id="settings-buttons-div">
-        <p class="link-button" id="schedule-button">Set schedule</p>
-    </div>
 
-    <div id="settings-div" class="no-style-div">
-        <div class="content">Stuff</div>
+    <div class="no-style-div side-by-side-container">
+        <div class="center-text settings-button-panel" id="settings-buttons-div">
+            <p class="link-button" id="schedule-button">Set schedule</p>
+            <p class="link-button" id="test-button">Test</p>
+        </div>
+    
+        <div id="settings-div" class="no-style-div">
+            <div data-setting="schedule" class="settings-div-content">
+
+                <h3>Set schedule content here!</h3>
+
+            </div>
+
+            <div data-setting="test" class="settings-div-content">
+                <h3>This is a test :D VeeeeeeeeeeeeeeeeeeryLoooooooooooongTeeeeeeeeeext</h3>
+            </div>
+        </div>
     </div>
 
     <!-- </div> -->
