Add a-day b-day headers to settings

--- a/popup.html
+++ b/popup.html
@@ -30,7 +30,10 @@
         <div id="settings-div" class="no-style-div">
             <div data-setting="schedule" class="settings-div-content">
 
-                <h3>Set schedule content here!</h3>
+                <div class="no-style-div side-by-side-container">
+                    <div class="aday-schedule-header schedule-header dont-wrap-text">A-Day</div>
+                    <div class="bday-schedule-header schedule-header dont-wrap-text">B-day</div>
+                </div>
 
             </div>
 
