half finish with template divs

--- a/popup.html
+++ b/popup.html
@@ -15,6 +15,10 @@
 
 <body>
 
+    <template id="set-schedule-period">
+        <h3>Test</h3>
+    </template>
+
     <!-- <div class="no-style-div" id="popup-container"> -->
 
     <div class="popup-header dont-wrap-text">
@@ -31,8 +35,8 @@
             <div data-setting="schedule" class="settings-div-content">
 
                 <div class="no-style-div side-by-side-container">
-                    <div class="aday-schedule-header schedule-header dont-wrap-text">A-Day</div>
-                    <div class="bday-schedule-header schedule-header dont-wrap-text">B-day</div>
+                    <div id="aday-schedule-header" class="aday-schedule-header schedule-header dont-wrap-text">A-Day</div>
+                    <div id="bday-schedule-header" class="bday-schedule-header schedule-header dont-wrap-text">B-day</div>
                 </div>
 
             </div>
