--- a/easylsh_newtab/index.html
+++ b/easylsh_newtab/index.html
@@ -16,7 +16,7 @@
 
 <div class="center round-corners">
     <h1>CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT</h1>
-    <a class="link-button" href="https://logins2.renweb.com/logins/ParentsWeb-Login.aspx">FACTS</a>
+    <a class="link-button" href="https://familyportal.renweb.com/?DistrictCode=lsh-mt">FACTS</a>
     <p class="link-button" id="javascript_test">Javascript test</p>
 </div>
 
