add unfinished clone template code

--- a/popup.html
+++ b/popup.html
@@ -35,8 +35,14 @@
             <div data-setting="schedule" class="settings-div-content">
 
                 <div class="no-style-div side-by-side-container">
-                    <div id="aday-schedule-header" class="aday-schedule-header schedule-header dont-wrap-text">A-Day</div>
-                    <div id="bday-schedule-header" class="bday-schedule-header schedule-header dont-wrap-text">B-day</div>
+                    <div class = "no-style-div" id="aday-schedule-div">
+                        <div id="aday-schedule-header" class="aday-schedule-header schedule-header dont-wrap-text">A-Day</div>
+                    </div>
+
+                    <div class = "no-style-div" id="bday-schedule-div">
+                        <div id="bday-schedule-header" class="bday-schedule-header schedule-header dont-wrap-text">B-day</div>
+                    </div>
+                    
                 </div>
 
             </div>
